argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easy-crm-svc
  namespace: default
spec:
  selector:
    app: easy-crm
  ports:
    - port: 80
      protocol: TCP
      name: http
      targetPort: 8080
