argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easy-crm-http
  namespace: default
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: easycrm.maksim-rotmann.dynv6.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easy-crm-svc
                port:
                  number: 80
  tls:
    - hosts:
        - easycrm.maksim-rotmann.dynv6.net
